# matrix

./: .gitignore  Cargo.toml
src/: lib.rs  parse.rs
tests/: 3d_array.rs  3d_array.stderr  correct_args.rs  correct_output.rs  diff_len_arrs.rs  diff_len_arrs.stderr  index.rs  trybuild.rs
